# streamy

./: Makefile  component.mk  go.mod  go.sum  stream.go
firmware/: CMakeLists.txt  naos.json
firmware/src/: main.c  snd.c  snd.h
lib/: .gitignore  CMakeLists.txt  Makefile  snd.c  streamy.c  streamy.h
lib/test/: naos.json
lib/test/src/: main.c
max-sender/: Makefile  main.go  streamy.maxpat  test.maxpat
sender/: go.mod  go.sum  main.go
